<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootLayout">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="#4E0D3A"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_btn"
        android:src="@drawable/ic_favorite_red_24dp"
        app:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:useCompatPadding="true"
        android:contentDescription="Add to favourites" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout"
            android:orientation="vertical"
            android:background="#E6E6E6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:text="@string/Original_title"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/poster"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="43dp"
                        android:layout_marginLeft="14dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        app:civ_border_color="@color/teal_200"
                        app:civ_border_width="3dp" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="200dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_marginTop="40dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="20dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="8dp"
                                android:layout_marginLeft="40dp"
                                android:gravity="fill_vertical"
                                android:layout_weight="1"
                                android:background="@drawable/ic_star_black_24dp"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_ratings"
                                android:layout_width="20dp"
                                android:layout_height="40dp"
                                android:layout_weight="9"
                                android:layout_marginTop="10dp"
                                android:layout_marginLeft="4dp"
                                android:gravity="center_vertical"
                                android:textAlignment="gravity"
                                android:textColor="@color/purple_500"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:text="@string/release_date"
                            android:textColor="@color/purple_500"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="50dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/release_date"
                            android:textStyle="italic"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp"
                            android:layout_marginLeft="50dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:elevation="5dp"
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="@string/overviewLabel"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:id="@+id/movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>